[package]
name = "client"
version = "0.1.0"
authors = ["vic <vic@bitoex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.7.11"
solana-client = "1.8.0"
solana-sdk = "1.8.0"
bs58 = "0.4.0"
