[package]
name = "program"
version = "0.1.0"
authors = ["vic <vic@bitoex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.7.11"

[dev-dependencies]
solana-program-test = "=1.8.0"
solana-sdk = "=1.8.0"

[lib]
crate-type = ["cdylib", "lib"]
