[package]
name = "solana_bank"
version = "0.1.0"
authors = ["vicxu <vic.xu.development@gmail.com>"]
edition = "2018"
license = "MIT"
description = "solana program for testing"
repository = "https://github.com/vx416/solana_play"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.7.11"
blob = "0.3.0"
arrayref = "0.3.6"


[dev-dependencies]
solana-program-test = "=1.8.0"
solana-sdk = "=1.8.0"

[lib]
crate-type = ["cdylib", "lib"]
